--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link " aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#features">About us</a>
+            <a class="nav-link" href="./assets/abt.html">About us</a>
             <a class="nav-link" href="#">Book an appoinment</a>
             <a class="nav-link ">Blog</a>
           </div>
@@ -51,7 +51,7 @@
     </header>
     <section class="i">
       <div class="onimg">
-        <img src="./assets/images/banner2.png" class="img-fluid" />
+        <img src="./assets/images/banner2.png"  />
         <!-- <h1><span> We Care </span> for Your Health Every Moment</h1> -->
         <h1>We Care <br><span></span></h1>
         
